# clearo

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  my_controllers.yaml  nav2_params.yaml  view_bot.rviz
description/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: ball_tracker.launch.py  boustrophedon.launch.py  floor_coverage_launch.py  hybrid_controller.launch.py  imu.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  mapping.launch.py  navigation_launch.py  nmpc_controller.launch.py  online_async_launch.py  pid_controller_visual.launch.py  pid_straight_line.launch.py  robot_startup.launch.py  rsp.launch.py  straight_line_waypoints.launch.py
rviz/: mapping.rviz
scripts/: base_robot_controller.py  boustrophedon_controller.py  calibrate_mpu6050.py  floor_coverage_controller.py  hybrid_controller.py  movement_controller.py  mpu6050_node.py  nav2_straight_line_goal.py  nmpc_controller.py  nmpc_path_planner.py  pid_controller_visual.py  pid_straight_line_controller copy.py  pid_straight_line_controller.py  robot_web_server.py  simple_waypoint_follower.py  square_path.py  straight_line.py  straight_line_waypoints.py  turn_controller.py
web/templates/: index.html
worlds/: obstacles.sdf
